Start the Java 10 upgrade process.