@@ -77,7 +77,7 @@ public final class PageEditor {
                                 x + xSuffix + ENTRY_PROMPT_PART_1 + y + ySuffix
                                         + ENTRY_PROMPT_PART_2,
                                 editorString,
-                                new Double(this.page.getCoefficient(x, y))
+                                Double.valueOf(this.page.getCoefficient(x, y))
                                         .toString());
                         try {
                             input = Double.parseDouble(rawInput);
